# musu-indexer

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yml
indexer_src/: go.mod  go.sum  main.go
src/musu_indexer/: cli.py  core.py  query_expander.py  server.py  spy_sink.py  watcher.py
